--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ dark-theme: false
 #resume-external: true
 #resume-url: https://google.com/?q=my+resume
 
-url: https://mbinshahz.github.io
+url: https://mbinshahzad.github.io
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
