--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ picture: https://media.licdn.com/dms/image/D4D03AQFe01Tz3kYRqw/profile-displayph
 
 # your site color theme, true for dark theme, 
 # false to light theme, auto to switch with system.
-dark-theme: false
+dark-theme: true
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
