--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ picture: https://media.licdn.com/dms/image/D4D03AQFe01Tz3kYRqw/profile-displayph
 
 # your site color theme, true for dark theme, 
 # false to light theme, auto to switch with system.
-dark-theme: true
+dark-theme: auto
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -26,7 +26,7 @@ url: https://mbinshahzad.github.io
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
+ #analytics-google: 'G-B8HPPJV4EL'
 
 # if you don't want comments in your posts, leave categories empty
 #disqus:
@@ -38,11 +38,11 @@ permalink: /:title/
 twitter: mbinshahzad
 instagram: mbinshahz
 linkedin: mbinshahzad
-github: mbinshahz
+github: mbinshahzad
 email: mbinshahz@gmail.com
 
 authors:
-  johndoe:
+  muhammad:
     name: Muhammad Bin Shahzad
     bio: Cybersecurity Prodigy | TEDx Speaker | UN Youth Ambassador | 25 Under 25
     external-image: true
