--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url: https://mbinshahzad.github.io
 permalink: /:title/
 
 # To enable google analytics, supply your token below
- #analytics-google: 'G-B8HPPJV4EL'
+ analytics-google: 'G-B8HPPJV4EL'
 
 # if you don't want comments in your posts, leave categories empty
 #disqus:
