--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ bio: Cybersecurity Prodigy | TEDx Speaker | UN Youth Ambassador | 25 Under 25
 # if it's an external image, update below for true
 # better with square images
 external-image: true
-picture: https://media.licdn.com/dms/image/D4D03AQFe01Tz3kYRqw/profile-displayphoto-shrink_200_200/0/1702796559551?e=1709164800&v=beta&t=Yh4RR8BmlGJRIjlNBCgAr1Lbg6emixfvH6Bim6YaSVI
+picture: https://mbinshahzad.github.io/assets/images/profile.jpeg
 
 # your site color theme, true for dark theme, 
 # false to light theme, auto to switch with system.
@@ -46,7 +46,7 @@ authors:
     name: Muhammad Bin Shahzad
     bio: Cybersecurity Prodigy | TEDx Speaker | UN Youth Ambassador | 25 Under 25
     external-image: true
-    picture: https://media.licdn.com/dms/image/D4D03AQFe01Tz3kYRqw/profile-displayphoto-shrink_200_200/0/1702796559551?e=1709164800&v=beta&t=Yh4RR8BmlGJRIjlNBCgAr1Lbg6emixfvH6Bim6YaSVI
+    picture: https://mbinshahzad.github.io/assets/images/profile.jpeg
     twitter: mbinshahzad
 
 # do you want a larger site? change the option below
